--- a/index.html
+++ b/index.html
@@ -89,29 +89,59 @@ for (let i = 0; i < starCount; i++) {
 }
     var gamelist = [ 
   {
-    "link": "https://orson-sander.github.io/orsons-gn",
+    "link": "https://hacker-114.github.io/orsons-gn",
     "imgSrc": "images/gn.png",
     "title": "GN Math"
   }, 
   {
     "link": "https://sites.google.com/student.evergreenps.org/rebel/games",
     "imgSrc": "images/shadow.png",
-    "title": "Shadow"
+    "title": "Rebel"
   }, 
   {
-    "link": "https://github.com/orson-sander",
+    "link": "https://github.com/hacker-114",
     "imgSrc": "images/github.webp",
     "title": "Github"
   }, 
   {
-    "link": "https://sites.google.com/view/scholarvision/movies/",
+    "link": "https://docs.google.com/presentation/d/1YDZCGRJMcIXA6CDnnxEUcNuZuEx-NdUETeeVFulhYDg/edit",
     "imgSrc": "images/movies.png",
     "title": "Movies"
   }, 
   {
-    "link": "https://backgroundsync.fpr.net/#",
+    "link": "https://lh3.googleusercontent.com/sitesv/AAzXCkdiiEvAhBUGJreBZyzfqWXwIPT7D4HkOicQ_EapYySz8cH5pG4tNJaqh0_Gxes6GK9SqH0z2nKfssZuJSzNjrbvXCPcJaUOnedFlBGdvsVjmv57A27ZTRJNzSO_63g3djGb91xFQbhcE81CQ4ZDQ8emvg3EQU87hAaoyQYmdDNmJEiUvXeKxGPkn3dgiWlqrtQH4A9nkxvwcEKLKvxECAyNX2VT7AFRSizi=w1280",
     "imgSrc": "images/pizza.png",
     "title": "Pizza Edition"
+  },
+  {
+    "link": "https://sites.google.com/student.evergreenps.org/digi-link/",
+    "imgSrc": "images/movies.png",
+    "title": "Digi Link"
+  }, 
+  {
+    "link": "https://sites.google.com/view/greenzy-frost/home",
+    "imgSrc": "images/nova.png",
+    "title": "Nova X"
+  },
+  {
+    "link": "https://hacker-114.github.io/y-tube/",
+    "imgSrc": "images/youtube.png",
+    "title": "YouTube Pass"
+  }, 
+  {
+    "link": "https://sites.google.com/student.evergreenps.org/martinthegreat/home",
+    "imgSrc": "images/martin.png",
+    "title": "Martin's Classroom"
+  },
+  {
+    "link": "https://sites.google.com/view/geometry-dash-games/home",
+    "imgSrc": "images/geometry.png",
+    "title": "Geometry Dash"
+  }, 
+  {
+    "link": "https://sites.google.com/view/bloxd-resources/home",
+    "imgSrc": "images/bloxd.png",
+    "title": "Bloxd"
   },
   {
     "link": "https://PPFN-Games.github.io/PPFN-Static",
