--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ for (let i = 0; i < starCount; i++) {
   }, 
   {
     "link": "https://sites.google.com/view/bloxd-resources/home",
-    "imgSrc": "images/bloxd.png",
+    "imgSrc": "images/bloxd.webp",
     "title": "Bloxd"
   },
   {
