--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ for (let i = 0; i < starCount; i++) {
   },
   {
     "link": "https://hacker-114.github.io/y-tube/",
-    "imgSrc": "images/youtube.png",
+    "imgSrc": "images/youtube.jpg",
     "title": "YouTube Pass"
   }, 
   {
