--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ for (let i = 0; i < starCount; i++) {
   },
   {
     "link": "https://sites.google.com/student.evergreenps.org/digi-link/",
-    "imgSrc": "images/movies.png",
+    "imgSrc": "images/digi.png",
     "title": "Digi Link"
   }, 
   {
